fix: only add overflow-y (#18)

--- a/src/components/check-filter.module.css
+++ b/src/components/check-filter.module.css
@@ -48,7 +48,7 @@
 
 .filter-options {
   max-height: 200px;
-  overflow: scroll;
+  overflow-y: auto;
 }
 
 .clearButton {
